--- a/SW/Firmware/data/stats.css
+++ b/SW/Firmware/data/stats.css
@@ -15,7 +15,7 @@ div.data-wrapper {
 
 p{
     line-height: 30px;
-    text-align: left;
+    text-align: center;
 }
 
 div.paragraph-center-wrapper{
